syntax = "proto3";
package strsvc.v1;

option go_package = "./strsvcv1";

service StringService {
  rpc Casing(CasingRequest) returns (CasingResponse);
}

message CasingRequest {
  oneof message {
    LowerCase lower_case = 1;
    UpperCase upper_case = 2;
  }
}

message LowerCase {
  string input = 1;
}

message UpperCase {
  string input = 1;
}

message CasingResponse {
  string result = 1;
}
